--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,14 +3,11 @@ env:
   - GO111MODULE=on
 before:
   hooks:
-    - go mod tidy
+    - go mod download
 archives:
-  - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      386: i386
-      amd64: x86_64
+  - name_template: "{{ .ProjectName }}_{{ if index .Env \"BUILD_ID\" }}{{ .Env.BUILD_ID }}{{ else }}{{ .ShortCommit }}{{ end }}_{{ .Arch }}"
+    format: zip
+
 builds:
   - main: .
     ldflags:
@@ -19,4 +16,7 @@ builds:
       - -X github.com/skanehira/rtty/cmd.Revision={{.ShortCommit}}
     goos:
       - linux
-      - darwin
+    goarch:
+      - amd64
+      - arm64
+      - arm
